//
//  SaleItemCellType.swift
//  BallroomBuySell
//
//  Created by Taylor Chapman on 2022-01-07.
//

enum SaleItemCellType: String, Codable {
    case textField, picker, imageCollection, toggle, textView
}
