//
//  TextViewCellDM.swift
//  BallroomBuySell
//
//  Created by Taylor Chapman on 2022-03-26.
//

struct TextViewCellDM {
    let title: String
    let detail: String
    var isEnabled: Bool = true
    let accessibilityIdentifier = "textView" // TODO! pass in
}
