...
                                    <action selector="inboxButtonClicked" destination="tzZ-SI-Im0" id="lXO-mI-IsG"/>
                                </connections>
                            </barButtonItem>
                            <barButtonItem image="plus" catalog="system" id="IIH-Bz-4L8">
                                <color key="tintColor" name="interactivity"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="addItem"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
                                    <action selector="sellButtonClicked" destination="tzZ-SI-Im0" id="3Cg-lI-4WV"/>
                                </connections>
                            </barButtonItem>
                        </rightBarButtonItems>
...
